# synthir

./: .gitignore  Cargo.toml  README.md
src/: benchmark.rs  config.rs  lib.rs  main.rs  meta.rs
src/checkpoint/: progress.rs
src/generation/: diversity.rs  documents.rs  mod.rs  queries.rs  relevance.rs
src/llm/: embeddings.rs  language.rs  mod.rs  prompts.rs  provider.rs
src/mining/: hard_negatives.rs  mod.rs
src/output/: beir.rs  mod.rs  ocr.rs  organizer.rs
src/topics/: builtin.rs  mod.rs  traits.rs
src/utils/: display.rs
