[package]
name = "synthir"
version = "0.1.0"
edition = "2021"
description = "Synthetic IR dataset generator for realistic information retrieval evaluation"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# OpenAI-compatible API client
async-openai = { version = "0.32.4", features = ["chat-completion"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI
clap = { version = "4.5.54", features = ["derive"] }

# Progress bars and logging
indicatif = "0.18.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Utilities
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.9.2"
thiserror = "2.0.18"
anyhow = "1.0.100"

# BM25 hard negative mining
tantivy = "0.25.0"

# Async utilities
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.24.0"
